--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,10 @@ h2 {
   @apply text-center text-indigo-500 my-4;
 }
 
+h3 {
+  @apply text-blue-600 my-4;
+}
+
 h4 {
   @apply text-center text-red-600 my-4 text-2xl;
 }
